--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -15,5 +15,5 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!--Mi hoja de estilos-->
     <link rel="stylesheet" type="text/css" href="/styles/index.css">
+    <!--Socket.IO-->
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/main.js"></script>
