--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -13,7 +13,9 @@
                 <h9>Carrito</h9>
                 <p class="badge bg-dark text-white ms-1 rounded-pill" id="totalPrice" ></p>
             </a>
-        </div>
+          </div>
+          <div class="d-flex four" id="tabla-user"> <!--Carrito del bootstrap theme-->
+          </div>
 </div>
 <nav class="navbar navbar-expand-lg navbar-light"> <!--nav bar de bootstrap con menú hamburguesa en responsive-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
